--- a/dashboard.html
+++ b/dashboard.html
@@ -365,9 +365,9 @@
         </ul>
         
         <div class="user-profile">
-            <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="User">
+            <img src="" alt="User">
             <div class="user-info">
-                <h4>John Beekeeper</h4>
+                <h4>praveen</h4>
                 <p>Admin</p>
             </div>
             <button class="logout-btn" id="logoutBtn">
