--- a/dashboard.html
+++ b/dashboard.html
@@ -333,7 +333,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="">
                     <i class="fas fa-tint"></i>
                     <span>Humidity</span>
                 </a>
@@ -346,12 +346,12 @@
             </li>
             <li>
                 <a href="#">
-                    <i class="fas fa-graduation-cap"></i>
+                    <i class="https://youtu.be/g2Gq5octKkU?si=18GUBWJ400hGjWEw"></i>
                     <span>Tutorials</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="https://www.youtube.com/results?search_query=bee+hive+management+">
                     <i class="fas fa-video"></i>
                     <span>Videos</span>
                 </a>
